# jax-cddd

./: .gitignore  README.md  pyproject.toml
scripts/: convert_checkpoint.py  reconstruct_smoke_test.py  run_original_model.py  validate_against_tf1_reference.py
src/jax-cddd/: hyperparameters.py  inference.py  input_pipeline.py  models.py
src/jax_cddd/: __init__.py  _download.py  decoding.py  gru.py  inference.py  modules.py  param_names.py  params.py  vocab.py
src/jax_cddd/_legacy_tf1/: model_helper.py
tests/: test_against_original_code.py  test_against_tf1_reference.py  test_encoder_decoder_shapes.py  test_gru_cell.py  test_inference_chunking.py  test_params.py  test_roundtrip_smiles.py  test_vocab.py
tests/fixtures/: original_code_reference.npz  tf1_reference.npz
