[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-cddd"
dynamic = ["version"]
description = "JAX port of CDDD (Continuous Data-Driven Descriptors) for molecular SMILES embedding/reconstruction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12]>=0.10",
    "flax>=0.12",
    "optax>=0.2",
    "rdkit>=2024.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

# There is no `convert` extra: the `jax-cddd-convert` environment (used by
# scripts/convert_checkpoint.py, scripts/validate_against_tf1_reference.py, and
# scripts/run_original_model.py) runs a legacy Python 3.7 + TensorFlow 1.15
# install so it can execute the *actual* original CDDD graph (tf.contrib), which
# this package's own `requires-python = ">=3.10"` can't satisfy -- see the
# README for exact setup commands. It is installed standalone (plain
# `pip install tensorflow==1.15.5 protobuf==3.20.3`), never via
# `pip install -e .`, and imports jax_cddd's dependency-free submodules
# (vocab.py, param_names.py) straight from source via a small sys.path
# bootstrap in each script rather than an editable install.

[tool.setuptools.dynamic]
version = {attr = "jax_cddd.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["jax_cddd*"]
# _legacy_tf1 is original TF1 reference code kept for history/reading (see
# README) -- it's plain TF1 source that doesn't even run under a modern
# jax-cddd install, so it must never ship in the installed package.
exclude = ["jax_cddd._legacy_tf1", "jax_cddd._legacy_tf1.*"]

[tool.setuptools.package-data]
jax_cddd = ["data/*.npy"]

# Excluding _legacy_tf1 from `packages.find` above only stops it being treated
# as an importable subpackage -- setuptools still sweeps its files in as
# implicit package data of `jax_cddd` unless explicitly excluded here too.
[tool.setuptools.exclude-package-data]
jax_cddd = ["_legacy_tf1/*", "_legacy_tf1/**/*"]
